lib/comment_parser.js
/*!
 * api-annotation: lib/comment_parser.js
 * Authors  : fish <zhengxinlin@gmail.com> (https://github.com/fishbar)
 * Create   : 2015-10-19 20:39:57
 * CopyRight 2015 (c) Fish And Other Contributors
 */
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Expression: peg$parseExpression },
        peg$startRuleFunction  = peg$parseExpression,

        peg$c0 = function(syntax) {return syntax;},
        peg$c1 = function(result) {
         return result;
        },
        peg$c2 = { type: "other", description: "syntax @api" },
        peg$c3 = function(token, methods) {return methods},
        peg$c4 = function(token, methods, url) {return url},
        peg$c5 = function(token, methods, url) {
            if (!methods || methods.length === 0) {
              methods = ['get'];
            }

            if (!url) {
              error(info(location()) + 'api url missing, syntax should be:`@api {$methods} $url`');
            }

            return {
              token: token,
              methods: methods,
              url: url
            }
          },
        peg$c6 = { type: "other", description: "syntax @name" },
        peg$c7 = /^[^@\n\r]/,
        peg$c8 = { type: "class", value: "[^@\\n\\r]", description: "[^@\\n\\r]" },
        peg$c9 = function(token, name) {return name},
        peg$c10 = function(token, name) {
            return {
              token: token,
              value: name
            }
          },
        peg$c11 = function(token, desc) {return desc},
        peg$c12 = function(token, desc) {
            return {
              token: token,
              value: desc
            }
          },
        peg$c13 = function(token, params) {return params},
        peg$c14 = function(token, params) {
            return {
              token: token,
              value: params
            }
          },
        peg$c15 = function(token, query) {return query},
        peg$c16 = function(token, query) {
            return {
              token: token,
              value: query
            }
          },
        peg$c17 = ":",
        peg$c18 = { type: "literal", value: ":", description: "\":\"" },
        peg$c19 = /^[a-z]/,
        peg$c20 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c21 = function(token, type) {return type},
        peg$c22 = function(token, type, body) {return body},
        peg$c23 = function(token, type, body) {
            return {
              token: token,
              type: type,
              value: body
            }
          },
        peg$c24 = function(token, ignore) {
            return {
              token: token,
              value: true
            }
          },
        peg$c25 = function(token, type, success) {return success},
        peg$c26 = function(token, type, success) {
            return {
              token: token,
              type: type,
              value: success
            }
          },
        peg$c27 = function(token, type, failure) {return failure},
        peg$c28 = function(token, type, failure) {
            return {
              token: token,
              type: type,
              value: failure
            }
          },
        peg$c29 = function(token, info) {return info},
        peg$c30 = function(token, info) {
            return {
              token: token,
              value: info
            }
          },
        peg$c31 = { type: "other", description: "http methods" },
        peg$c32 = "{",
        peg$c33 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c34 = "|",
        peg$c35 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c36 = function(method) {return method},
        peg$c37 = "}",
        peg$c38 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c39 = function(methods) {
          checkHttpMethod(methods);
          methods.forEach(function (m, i, a) {
            a[i] = m.toLowerCase();
          });

          return methods;
        },
        peg$c40 = { type: "other", description: "http method" },
        peg$c41 = /^[a-zA-Z]/,
        peg$c42 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c43 = /^[^\r\n]/,
        peg$c44 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c45 = /^[^@]/,
        peg$c46 = { type: "class", value: "[^@]", description: "[^@]" },
        peg$c47 = "@",
        peg$c48 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c49 = "@api",
        peg$c50 = { type: "literal", value: "@api", description: "\"@api\"" },
        peg$c51 = function() {return "api"},
        peg$c52 = { type: "other", description: "token @params" },
        peg$c53 = "@params",
        peg$c54 = { type: "literal", value: "@params", description: "\"@params\"" },
        peg$c55 = function() {return "params"},
        peg$c56 = { type: "other", description: "token @query" },
        peg$c57 = "@query",
        peg$c58 = { type: "literal", value: "@query", description: "\"@query\"" },
        peg$c59 = function() {return "query"},
        peg$c60 = { type: "other", description: "token @body" },
        peg$c61 = "@body",
        peg$c62 = { type: "literal", value: "@body", description: "\"@body\"" },
        peg$c63 = function() {return "body"},
        peg$c64 = { type: "other", description: "token @success" },
        peg$c65 = "@success",
        peg$c66 = { type: "literal", value: "@success", description: "\"@success\"" },
        peg$c67 = function() {return "success"},
        peg$c68 = { type: "other", description: "token @failure/@error" },
        peg$c69 = "failure",
        peg$c70 = { type: "literal", value: "failure", description: "\"failure\"" },
        peg$c71 = "error",
        peg$c72 = { type: "literal", value: "error", description: "\"error\"" },
        peg$c73 = function() {return "failure"},
        peg$c74 = { type: "other", description: "token @name" },
        peg$c75 = "@name",
        peg$c76 = { type: "literal", value: "@name", description: "\"@name\"" },
        peg$c77 = function() {return "name"},
        peg$c78 = { type: "other", description: "token @json" },
        peg$c79 = "@json",
        peg$c80 = { type: "literal", value: "@json", description: "\"@json\"" },
        peg$c81 = function() {return "json"},
        peg$c82 = { type: "other", description: "token @desc/@description" },
        peg$c83 = "description",
        peg$c84 = { type: "literal", value: "description", description: "\"description\"" },
        peg$c85 = "desc",
        peg$c86 = { type: "literal", value: "desc", description: "\"desc\"" },
        peg$c87 = function() {return "desc"},
        peg$c88 = { type: "other", description: "token undefined" },
        peg$c89 = function(name) {return "unknow:" + name},
        peg$c90 = /^[ \t]/,
        peg$c91 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c92 = { type: "other", description: "new line" },
        peg$c93 = /^[\n]/,
        peg$c94 = { type: "class", value: "[\\n]", description: "[\\n]" },
        peg$c95 = "",
        peg$c96 = { type: "other", description: "empty line or the end of the string" },
        peg$c97 = { type: "other", description: "whitespace" },
        peg$c98 = /^[ \t\n\r]/,
        peg$c99 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseExpression() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parse_();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseSYNTAX();
        if (s4 !== peg$FAILED) {
          peg$savedPos = s2;
          s3 = peg$c0(s4);
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parse_();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseSYNTAX();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c0(s4);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseEND();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSYNTAX() {
      var s0;

      s0 = peg$parseSYNTAX_API();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSYNTAX_NAME();
        if (s0 === peg$FAILED) {
          s0 = peg$parseSYNTAX_DESC();
          if (s0 === peg$FAILED) {
            s0 = peg$parseSYNTAX_QUERY();
            if (s0 === peg$FAILED) {
              s0 = peg$parseSYNTAX_BODY();
              if (s0 === peg$FAILED) {
                s0 = peg$parseSYNTAX_PARAMS();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseSYNTAX_SUCCESS();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseSYNTAX_FAILURE();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseSYNTAX_JSON();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseSYNTAX_UNKNOW();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseSYNTAX_API() {
      var s0, s1, s2, s3, s4, s5, s6;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseTOKEN_API();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseSPACE();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseMETHODS();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c3(s1, s4);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parseSPACE();
          if (s4 !== peg$FAILED) {
            s5 = peg$currPos;
            s6 = peg$parseURL();
            if (s6 !== peg$FAILED) {
              s5 = input.substring(s5, peg$currPos);
            } else {
              s5 = s6;
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c4(s1, s2, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseLINE_END();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c5(s1, s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }

      return s0;
    }

    function peg$parseSYNTAX_NAME() {
      var s0, s1, s2, s3, s4, s5, s6;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseTOKEN_NAME();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseSPACE();
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          s5 = [];
          if (peg$c7.test(input.charAt(peg$currPos))) {
            s6 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s6 !== peg$FAILED) {
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              if (peg$c7.test(input.charAt(peg$currPos))) {
                s6 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c8); }
              }
            }
          } else {
            s5 = peg$FAILED;
          }
          if (s5 !== peg$FAILED) {
            s4 = input.substring(s4, peg$currPos);
          } else {
            s4 = s5;
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c9(s1, s4);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLINE_END();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c10(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }

      return s0;
    }

    function peg$parseSYNTAX_DESC() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseTOKEN_DESC();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$currPos;
        s4 = peg$parseLINE_END();
        if (s4 !== peg$FAILED) {
          s5 = peg$currPos;
          s6 = peg$parseDESC();
          if (s6 !== peg$FAILED) {
            s5 = input.substring(s5, peg$currPos);
          } else {
            s5 = s6;
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c11(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s2 = input.substring(s2, peg$currPos);
        } else {
          s2 = s3;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEND();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c12(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSYNTAX_PARAMS() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseTOKEN_PARAMS();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseLINE_END();
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          s5 = peg$parseDESC();
          if (s5 !== peg$FAILED) {
            s4 = input.substring(s4, peg$currPos);
          } else {
            s4 = s5;
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c13(s1, s4);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEND();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c14(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSYNTAX_QUERY() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseTOKEN_QUERY();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseSPACE();
        if (s3 === peg$FAILED) {
          s3 = peg$parseLINE_END();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          s5 = peg$parseDESC();
          if (s5 !== peg$FAILED) {
            s4 = input.substring(s4, peg$currPos);
          } else {
            s4 = s5;
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c15(s1, s4);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEND();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c16(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSYNTAX_BODY() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseTOKEN_BODY();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 58) {
          s3 = peg$c17;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c18); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          s5 = [];
          if (peg$c19.test(input.charAt(peg$currPos))) {
            s6 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c20); }
          }
          if (s6 !== peg$FAILED) {
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              if (peg$c19.test(input.charAt(peg$currPos))) {
                s6 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c20); }
              }
            }
          } else {
            s5 = peg$FAILED;
          }
          if (s5 !== peg$FAILED) {
            s4 = input.substring(s4, peg$currPos);
          } else {
            s4 = s5;
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c21(s1, s4);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parseSPACE();
          if (s4 === peg$FAILED) {
            s4 = peg$parseLINE_END();
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$currPos;
            s6 = peg$parseDESC();
            if (s6 !== peg$FAILED) {
              s5 = input.substring(s5, peg$currPos);
            } else {
              s5 = s6;
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c22(s1, s2, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseEND();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c23(s1, s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSYNTAX_JSON() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseTOKEN_JSON();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseDESC();
        if (s3 !== peg$FAILED) {
          s2 = input.substring(s2, peg$currPos);
        } else {
          s2 = s3;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEND();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c24(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSYNTAX_SUCCESS() {
      var s0, s1, s2, s3, s4, s5, s6;
